feat: add inventory service with grpc